--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
 
   monero:
-    image: miner-monero
+    image: anecula/cpu-mining-on-docker-ubuntu
     container_name: monero-miner
     restart: unless-stopped
     environment:
